--- a/Second Semester/Attack Reporting Documentation/Labs/Assignment_8/Assignment_8.tex
+++ b/Second Semester/Attack Reporting Documentation/Labs/Assignment_8/Assignment_8.tex
@@ -81,8 +81,8 @@
 	\vspace{0.75\baselineskip} % Whitespace above the title
 
 	\huge{\textsc{
-        The Colonial Pipeline ransomware attack
-        }} \\
+		Analyze Real-World Incident Case Studies And Document The Findings.
+    }} \\
 
 	\vspace{0.5\baselineskip} % Whitespace below the title
 	\rule{\textwidth}{0.6pt}\vspace*{-\baselineskip}\vspace*{2.8pt}
@@ -118,88 +118,109 @@
 
 \setcounter{page}{1}
 
-\section*{1. Overview}
-The Colonial Pipeline ransomware attack occurred in May 2021, targeting the largest refined oil products pipeline in the United States. The attack, attributed to the Eastern European cybercriminal group DarkSide, disrupted fuel supplies across the East Coast, affecting approximately 45\% of the region's fuel delivery system. The attackers demanded and received a ransom of 75 Bitcoin (approximately \$4.4 million USD at the time). Despite paying the ransom, Colonial Pipeline faced significant operational and reputational impacts.
+\section{Overview}
+The 2021 Colonial Pipeline ransomware incident occurred on May 7, 2021, targeting the largest fuel pipeline in the United States. The attack was carried out by the DarkSide ransomware group, exploiting compromised credentials of an inactive VPN account without multi-factor authentication (MFA). This breach led to a shutdown of pipeline operations, causing widespread fuel shortages and significant financial and reputational impacts. Colonial Pipeline paid a ransom of approximately 5 million Dollars to obtain a decryption tool, though authorities later recovered 2.3 million Dollars.
 
-\section*{2. Incident Timeline}
-\begin{itemize}[leftmargin=*]
-    \item \textbf{May 6, 2021:} Initial intrusion and data theft (100 GB stolen within two hours).
-    \item \textbf{May 7, 2021:} Ransomware attack begins; Colonial Pipeline shuts down operations as a precaution.
-    \item \textbf{May 9, 2021:} President Biden declares a state of emergency to address fuel shortages.
-    \item \textbf{May 12, 2021:} Pipeline operations resume.
-    \item \textbf{June 7, 2021:} Department of Justice recovers approximately 63.7 Bitcoin (\$2.3 million USD).
+\section{Incident Timeline}
+\begin{itemize}
+    \item \textbf{April 29, 2021:} Attackers gained initial access using compromised credentials for an inactive VPN account.
+    \item \textbf{May 6, 2021:} Approximately 100 GB of data was exfiltrated by attackers.
+    \item \textbf{May 7, 2021:} Ransomware was deployed, encrypting systems and prompting Colonial Pipeline to shut down operations.
+    \item \textbf{May 8, 2021:} Colonial Pipeline paid a ransom of 5 million Dollars in Bitcoin to obtain a decryption tool.
+    \item \textbf{May 12, 2021:} Operations resumed after partial recovery using the decryption tool.
+    \item \textbf{June 7, 2021:} Authorities recovered 2.3 million Dollars of the ransom payment.
 \end{itemize}
 
-\section*{3. Attack Chain Analysis (MITRE ATT\&CK Mapping)}
-\begin{itemize}[leftmargin=*]
-    \item \textbf{Tactics:}
-        \begin{itemize}
-            \item Initial Access: Exploitation of Remote Services (T1210) via compromised VPN credentials.
-            \item Execution: Ransomware payload deployment (Data Encrypted for Impact - T1486).
-            \item Persistence: PowerShell-based backdoors and credential harvesting tools.
-            \item Lateral Movement: Compromised domain administrator credentials.
-            \item Exfiltration: Data exfiltrated through encrypted channels (TA0010).
-        \end{itemize}
-    \item \textbf{Indicators of Compromise (IOCs):}
-        \begin{itemize}
-            \item Malicious IPs and domains used for command-and-control.
-            \item File hashes of ransomware payloads.
-        \end{itemize}
+\section{Attack Chain Analysis (MITRE ATT\&CK Mapping)}
+The attack can be mapped using the MITRE ATT\&CK framework:
+\begin{itemize}
+    \item \textbf{Initial Access (T1078 - Valid Accounts):} Compromised credentials for an inactive VPN account without MFA.
+    \item \textbf{Persistence (Likely T1136 - Create Account):} Attackers maintained access through existing or new accounts.
+    \item \textbf{Lateral Movement (T1021 - Remote Services):} Likely used remote desktop protocol (RDP) or similar tools for network traversal.
+    \item \textbf{Data Exfiltration (T1041 - Exfiltration Over C2 Channel):} Exfiltrated approximately 100 GB of sensitive data before deploying ransomware.
+    \item \textbf{Impact (T1486 - Data Encrypted for Impact):} Ransomware encrypted critical systems, disrupting operations.
 \end{itemize}
 
-\section*{4. Root Cause Analysis}
-The attack originated from a compromised VPN account that lacked multi-factor authentication (MFA). The password was likely reused from a prior breach and traded on underground forums. Legacy VPN infrastructure and insufficient access controls further facilitated the breach.
+Indicators of Compromise (IOCs) include encrypted file extensions and ransom notes typical of DarkSide ransomware campaigns.
 
-\section*{5. Security Gaps and Failures}
-\begin{itemize}[leftmargin=*]
-    \item Lack of MFA for remote access systems.
-    \item Poor network segmentation allowed lateral movement across IT systems.
-    \item Inadequate monitoring and intrusion detection systems.
-    \item Insufficient incident response planning and preparedness.
+\section{Root Cause Analysis}
+The root cause was traced to compromised credentials for an inactive VPN account. The absence of MFA allowed attackers to gain unauthorized access. Contributing factors included poor account management practices and insufficient monitoring capabilities that failed to detect the intrusion during the week-long reconnaissance phase.
+
+\section{Security Gaps and Failures}
+The incident revealed several security gaps:
+\begin{itemize}
+    \item Lack of multi-factor authentication (MFA) on critical accounts.
+    \item Poor account management practices, with inactive accounts still accessible.
+    \item Insufficient monitoring and detection capabilities, allowing attackers to remain undetected for a week.
+    \item Weak network segmentation between IT and OT networks, increasing the risk of lateral movement.
 \end{itemize}
 
-\section*{6. Incident Response and Mitigation}
-\begin{itemize}[leftmargin=*]
-    \item Paid ransom to obtain decryption key but relied on internal recovery measures for faster restoration.
-    \item Engaged third-party security firm Mandiant for investigation and remediation.
-    \item Shut down pipeline operations to prevent further spread of ransomware.
-    \item Collaborated with federal agencies, including the FBI, to recover part of the ransom payment.
+\section{Incident Response and Mitigation}
+Colonial Pipeline's response included:
+\begin{itemize}
+    \item Immediate shutdown of pipeline operations to contain the threat.
+    \item Engagement with cybersecurity firm Mandiant for investigation and recovery efforts.
+    \item Payment of a 5 million Dollars ransom to obtain a decryption tool for restoring systems.
+    \item Coordination with government agencies such as the FBI and Department of Energy for support and investigation.
+    \item Partial recovery of ransom funds (2.3 million Dollars) by authorities in June 2021.
 \end{itemize}
 
-\section*{7. Impact and Consequences}
-The attack caused widespread fuel shortages across the East Coast, leading to panic buying and disruptions in air travel logistics. Fuel prices rose to their highest levels since 2014. The incident highlighted vulnerabilities in critical infrastructure cybersecurity and prompted regulatory scrutiny.
+While the decryption tool provided by attackers was functional, it operated slowly, necessitating additional recovery measures.
 
-\section*{8. Lessons Learned and Recommendations}
-\begin{enumerate}[leftmargin=*]
-    \item Implement multi-factor authentication (MFA) for all remote access systems.
-    \item Regularly audit access controls and enforce least privilege principles.
-    \item Enhance network segmentation to isolate critical systems from IT networks.
-    \item Develop and test an incident response plan through tabletop exercises.
-    \item Deploy advanced endpoint detection and response (EDR) solutions to monitor for malicious activity.
-    \item Educate employees on phishing awareness and password hygiene practices.
+\section{Impact and Consequences}
+The incident had significant consequences:
+\begin{itemize}
+    \item Operational: A six-day shutdown caused fuel shortages across several states, leading to panic buying and price hikes.
+    \item Financial: The company incurred a $5 million ransom payment, with partial recovery ($2.3 million), alongside costs associated with investigation and recovery efforts.
+    \item Reputational: The breach attracted public scrutiny and regulatory attention, highlighting vulnerabilities in critical infrastructure cybersecurity practices.
+\end{itemize}
+
+The incident prompted President Biden to declare a state of emergency due to its impact on national security.
+
+\section{Lessons Learned and Recommendations}
+The Colonial Pipeline ransomware attack offers valuable lessons for improving cybersecurity:
+\subsection*{Lessons Learned}
+Organizations must prioritize multi-factor authentication (MFA), conduct regular audits to deactivate unused accounts, enhance monitoring capabilities for early threat detection, and implement robust network segmentation to limit lateral movement.
+
+\subsection*{Recommendations}
+Key recommendations include:
+\begin{enumerate}
+    \item Implement MFA on all critical access points to prevent unauthorized access.
+    \item Conduct regular reviews of user accounts to deactivate unused or inactive accounts.
+    \item Enhance monitoring with advanced endpoint detection tools to identify threats in real-time.
+    \item Strengthen network segmentation between IT and OT environments to limit attack spread.
+    \item Develop comprehensive incident response plans and conduct regular drills to ensure preparedness.
+    \item Maintain isolated backups and test disaster recovery plans regularly for quick restoration after attacks.
 \end{enumerate}
+
+By adopting these measures, organizations can mitigate risks associated with ransomware attacks and enhance resilience against future threats.
 
 \clearpage
 \begin{thebibliography}{99}
-	\bibitem{wireshark}
-	Wireshark. \\
-	Website: \url{https://www.wireshark.org/}
+	\bibitem{it_act_2000}
+	Information Technology Act, 2000. \\
+	Government of India. Website: \url{https://www.meity.gov.in/content/information-technology-act}
 
-	\bibitem{tshark}
-	Tshark. \\
-	Website: \url{https://www.wireshark.org/docs/man-pages/tshark.html}
+	\bibitem{mitre_attack}
+	MITRE ATT\&CK Framework. \\
+	Website: \url{https://attack.mitre.org/}
 
-	\bibitem{tcpdump}
-	Tcpdump. \\
-	Website: \url{https://www.tcpdump.org/}
+	\bibitem{colonial_pipeline}
+	Colonial Pipeline Ransomware Attack, 2021. \\
+	Website: \url{https://www.cisa.gov/news/2021/05/14/colonial-pipeline-ransomware-attack}
 
-	\bibitem{aircrack}
-	AirCrack-ng. \\
-	Website: \url{https://www.aircrack-ng.org/}
+	\bibitem{darkside_ransomware}
+	DarkSide Ransomware Group. \\
+	Website: \url{https://www.fbi.gov/investigate/cyber/darkside-ransomware}
 
-	\bibitem{airsnort}
-	AirSnort. \\
-	Website: \url{https://sourceforge.net/projects/airsnort/}
+	\bibitem{mandiant_response}
+	Mandiant Incident Response Services. \\
+	Website: \url{https://www.mandiant.com/}
+
+	\bibitem{cybersecurity_best_practices}
+	Cybersecurity Best Practices for Critical Infrastructure. \\
+	Website: \url{https://www.cisa.gov/critical-infrastructure}
+
 \end{thebibliography}
 
 \end{document}
